# NetworkManager-openfortivpn

./: .gitignore  COPYING  README.md  meson.build  meson_options.txt  mise.toml  nm-openfortivpn-service.conf  nm-openfortivpn-service.name.in
auth-dialog/: main.c  meson.build  test-old-style-output.sh
properties/: meson.build  nm-openfortivpn-dialog.ui  nm-openfortivpn-editor-plugin.c  nm-openfortivpn-editor-plugin.h  nm-openfortivpn-editor.c  nm-openfortivpn-editor.h  nm-openfortivpn-properties-plugin.c  nm-openfortivpn.gresource.xml  test-editor.c  test-libnm-plugin-deps.sh  test-plugin-loader.c
shared/: nm-openfortivpn-service-defines.h  utils.h
src/: meson.build  nm-openfortivpn-service.c  nm-openfortivpn-service.h
